Connected settings page to back-end & fixed dark mode CSS

--- a/src/Pages/Settings/Settings.css
+++ b/src/Pages/Settings/Settings.css
@@ -7,7 +7,12 @@
     flex: 7;
 }
 
-.setting-msg{
+.setting-div {
+    display: flex;
+    flex-direction: row;
+}
+
+.setting-msg {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
@@ -16,36 +21,29 @@
     margin: 40px;
 }
 
-.setting-table{
+.setting-table {
     border-collapse: collapse;
     width: 25%;
     /* border: 1px solid #000000; */
     text-align:left;
-    margin-left: 35%;
-    margin-top: -13%;
+    margin-left: 25%;
 }
 
-.edit-photo{
-    border-style: none;
-    background-color:transparent;
-    text-decoration: underline;
-    color: blue;
-    position: absolute;
-    left: 32.5%;
-    bottom: 45%;
+.setting-admin-role {
+    font-style: italic;
 }
 
 .change-button{
-    width: 100px;
-    height: 35px;
-    background: blue;
-    border-radius: 8px;
-    border-style: none;
-    color: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
+    border-radius: 30px;
+    font-size: 18px;
+    width: 250px;
+    height: 70px;
+    cursor: pointer; 
+    margin-top: 20px;
 }
 
 .setting-text-box{
-    border-style: none;
     height: 30px;
     width: 200px;
 }
